--- a/404.html
+++ b/404.html
@@ -1,12 +1,12 @@
 <html>
 <head>
-    <title>氢写真 | 正在填装少女...</title>
+    <title>请稍后 | 页面正在加载中...</title>
 </head>
 <body>
 <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
 <script>LA.init({id:"K2Ty4IEpHOFWddJN",ck:"K2Ty4IEpHOFWddJN"})</script>
 <script>
-    document.location = 'https://mp.weixin.qq.com/mp/appmsgalbum?__biz=Mzk0OTUyNzcyOA==&action=getalbum&album_id=3039699674494074882#wechat_redirect'
+    document.location = 'https://huaban.com/user/hnvabzi8f8/creations'
 </script>
     
 </body>
